syntax = "proto3";

import "basic.proto";

package network_comms;

service DataNodeProtocol {
    rpc Heartbeat(EmptyMessage) returns (HeartbeatMessage);
}

message EmptyMessage {

}

message HeartbeatMessage {
    string node_id = 1;
    int64 timestamp = 2;
}
